new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -99,4 +99,8 @@
     .xp_text {
         text-align: center;
     }
+    .xp_subtitle {
+        text-align: center;
+        font-weight: bold;
+    }
 </style>
