new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -9,7 +9,7 @@
                 ng-class="contentListCtrl.columns">
 
             <!-- PICTURE -->
-            <div class="experience-img" ng-style="{'background': 'cover no-repeat url('+ rubedo.imageUrl.getUrlByMediaId(content.fields.image) +')'}">
+            <div class="experience-img" ng-style="{'background': 'center / cover no-repeat url('+ rubedo.imageUrl.getUrlByMediaId(content.fields.image) +')'}">
                 <!-- si le contenu a une image, on l'affiche dans la vignette -->
                 <!-- <img class="media-object pull-left" ng-if="content.fields.image"
                              ng-src="{{ rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'400px',height:'266px',mode:'crop'}) }}"
