new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -59,8 +59,8 @@
         color: white;
         text-align: center;
         padding: 1rem;
-        height: 20rem;
-        margin-bottom: -13rem;
+        height: 35rem;
+        margin-bottom: -28rem;
     }
     .experiences_back * {
         color: white;
@@ -81,6 +81,8 @@
         transition: transform .25s ease-in, -webkit-transform .25s ease-in, opacity 0.2s ease-in;
     }
     .show-xp-text {
+        margin: 3px;
+        width: calc(100% - 6px);
         transform: translateY(-100%);
         opacity: 1;
         transition: transform .25s ease-in, -webkit-transform .25s ease-in, opacity 0.1s ease-in;
