new contentlist experiences

--- a/theme/cte/templates/blocks/contentList/experiences.html
+++ b/theme/cte/templates/blocks/contentList/experiences.html
@@ -49,6 +49,10 @@
 </div>
 
 <style>
+    .xp_columns_container {
+        display: flex;
+        justify-content: center;
+    }
     .xp_container {
         width: 100%;
         max-width: 30cm;
